--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/abamanager
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3307/abamanager
 spring.datasource.username=root
 spring.datasource.password=root
-#spring.jpa.show-sql: true
+spring.jpa.show-sql: true
+spring.jpa.properties.hibernate.format_sql=true
+server.port=8080
