--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql: true
 spring.jpa.properties.hibernate.format_sql=true
+spring.mvc.hiddenmethod.filter.enabled=true
 server.port=8080
